clusters/dev/kind-k8s-cluster/hello-world-sachin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-sachin
  labels:
    istio-injection: enabled    # This enables automatic sidecar injection
