clusters/dev/kind-k8s-cluster/hello-world-sachin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-sachin
    kustomize.toolkit.fluxcd.io/name: flux-system
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: hello-world-sachin
  namespace: hello-world-sachin
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-world-sachin
  type: ClusterIP
